Cenection between Pc and Mobile with socket`s

--- a/client_phone/index.html
+++ b/client_phone/index.html
@@ -8,8 +8,11 @@
     <script src="control.js"></script>
 </head>
 <body>
-    <button id="up">UP</button>
-    <button id="down">DOWN</button>
+    <div class="container">
+        <button id="up">UP</button>
+        <button id="down">DOWN</button>
+    </div>
+    <button id="status">STATUS</button>
     <script src="./socket.io.js"></script>
     <script src="./control.js"></script>
 </body>
